1-7-2013. Edited README as test for second user commiting to remote repository.

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-One day I will have useful information. One day.
+Cost Splitting App
+By Mark Bunney, Kevin Lai, Benjamin Shih
+
+Features
+-TBA
+
+Version 0.0.1 Beta 1
+1-7-2013
+-Nothing yet
