--- a/README
+++ b/README
@@ -2,7 +2,9 @@ Cost Splitting App
 By Mark Bunney, Kevin Lai, Benjamin Shih
 
 Features
--TBA
+-OCR
+-Alg to minimize transactions
+-Good data-input UI
 
 Version 0.0.1 Beta 1
 1-7-2013
